--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -2,10 +2,17 @@ body {
     background-color: lightblue;
 }
 h1 {
-    color: white;
+    color: blue;
     text-align: center;
+}
+h2 {
+    color: black;
+    font-size: 25px;
 }
 p {
     font-family: verdana;
-    font-size: 20px;
+    font-size: 15px;
+}
+th,td {
+    color: blue;
 }
